Made some changes

--- a/digital-clock/style.css
+++ b/digital-clock/style.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("./background-img.jpg");
+    background-image: url("https://static.vecteezy.com/system/resources/previews/040/890/255/non_2x/ai-generated-empty-wooden-table-on-the-natural-background-for-product-display-free-photo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -1;
