--- a/digital-clock/style.css
+++ b/digital-clock/style.css
@@ -25,3 +25,26 @@
     padding: 15px 70px;
     border-radius: 10px;
 }
+
+/* Media Queries for Responsiveness */
+@media screen and (max-width: 768px) {
+    .clock {
+        font-size: 5rem;
+        padding: 12px 50px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .clock {
+        font-size: 3.5rem;
+        padding: 10px 30px;
+        letter-spacing: 1px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .clock {
+        font-size: 2.5rem;
+        padding: 8px 20px;
+    }
+}
